Fixed minor overflow for song ratings view page

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -716,6 +716,9 @@ h4 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
+
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 /* Username and Rating Score */
